# project1_Rozdorozhnyi_Ilya_M25_555

./: README.md  pyproject.toml
labyrinth_game/: constants.py  main.py  player_actions.py  utils.py
